test/corpus/passing_samples.txt
==================
samples/Circuits/CycleDeps/Source/Alpha/Alpha.vl
==================
@[Link("Beta")]


module Alpha


  def self.ping -> Int64
    1
  end


end

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (module_declaration
    (type_identifier)
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (integer_literal))))))

==================
samples/Circuits/CycleDeps/Source/Beta/Beta.vl
==================
@[Link("Alpha")]


module Beta


  def self.pong -> Int64
    2
  end


end

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (module_declaration
    (type_identifier)
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (integer_literal))))))

==================
samples/Circuits/CycleDeps/Source/Main.vl
==================
@[Link("Alpha")]


x = 1

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (integer_literal))))))

==================
samples/Circuits/DiamandDeps/Source/Auth/Service.vl
==================
@[Link("Core")]


module Auth


  class AuthService
    config : Core::AppConfig

    def initialize(@config : Core::AppConfig)
    end

    def verify_token -> Bool
      true
    end
  end


end

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (module_declaration
    (type_identifier)
    (class_declaration
      (type_identifier)
      (field_declaration
        (identifier)
        (qualified_type
          (type_identifier)
          (type_identifier)))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (instance_variable)
            (qualified_type
              (type_identifier)
              (type_identifier)))))
      (method_declaration
        (identifier)
        (type_identifier)
        (expression_statement
          (expression
            (boolean_literal)))))))

==================
samples/Circuits/DiamandDeps/Source/Core/Config.vl
==================
module Core


  struct AppConfig
    port : Int32
    secret : UInt8*

    def initialize( @port : Int32, @ecret : UInt8*)
    end
  end


end

---

(source_file
  (module_declaration
    (type_identifier)
    (struct_declaration
      (type_identifier)
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (pointer_type
          (type_identifier)))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (instance_variable)
            (type_identifier))
          (parameter
            (instance_variable)
            (pointer_type
              (type_identifier))))))))

==================
samples/Circuits/DiamandDeps/Source/Database/Client.vl
==================
@[Link("Core")]


module Database


  class DbClient
    config : Core::AppConfig

    def initialize( @config : Core::AppConfig )
    end

    def connect -> Void
    end
  end


end

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (module_declaration
    (type_identifier)
    (class_declaration
      (type_identifier)
      (field_declaration
        (identifier)
        (qualified_type
          (type_identifier)
          (type_identifier)))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (instance_variable)
            (qualified_type
              (type_identifier)
              (type_identifier)))))
      (method_declaration
        (identifier)
        (type_identifier)))))

==================
samples/Circuits/DiamandDeps/Source/Main.vl
==================
@[Link("Auth")]
@[Link("Database")]
@[Link("Core")]

config = Core::AppConfig.new( 5432, "super-secret-key".data )
db = Database::DbClient.new( config )
auth = Auth::AuthService.new( config )

db.connect
auth.verify_token

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (call_expression
            (expression
              (member_expression
                (expression
                  (member_expression
                    (expression
                      (type_identifier))
                    (type_identifier)))
                (identifier)))
            (expression
              (integer_literal))
            (expression
              (member_expression
                (expression
                  (string_literal))
                (identifier))))))))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (call_expression
            (expression
              (member_expression
                (expression
                  (member_expression
                    (expression
                      (type_identifier))
                    (type_identifier)))
                (identifier)))
            (expression
              (identifier)))))))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (call_expression
            (expression
              (member_expression
                (expression
                  (member_expression
                    (expression
                      (type_identifier))
                    (type_identifier)))
                (identifier)))
            (expression
              (identifier)))))))
  (expression_statement
    (expression
      (member_expression
        (expression
          (identifier))
        (identifier))))
  (expression_statement
    (expression
      (member_expression
        (expression
          (identifier))
        (identifier)))))

==================
samples/Circuits/TwoDeps/Source/Components/Logger.vl
==================
@[Link("Models")]


module Components


  class UserLogger

    prefix : String

    def initialize( @prefix : String )
    end

    def log_user( user : Models::User ) -> Void
      puts( @prefix )
      puts( user.name )
    end

  end


end

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (module_declaration
    (type_identifier)
    (class_declaration
      (type_identifier)
      (field_declaration
        (identifier)
        (type_identifier))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (instance_variable)
            (type_identifier))))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (qualified_type
              (type_identifier)
              (type_identifier))))
        (type_identifier)
        (expression_statement
          (expression
            (call_expression
              (expression
                (identifier))
              (expression
                (instance_variable)))))
        (expression_statement
          (expression
            (call_expression
              (expression
                (identifier))
              (expression
                (member_expression
                  (expression
                    (identifier))
                  (identifier))))))))))

==================
samples/Circuits/TwoDeps/Source/Main.vl
==================
@[Link("Models")]
@[Link("Components")]


user = Models::User.new( 42, "Yutsuna" )
logger = Components::UserLogger.new( "[user]" )
logger.log_user( user )

---

(source_file
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (annotation
    (type_identifier)
    (expression
      (string_literal)))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (call_expression
            (expression
              (member_expression
                (expression
                  (member_expression
                    (expression
                      (type_identifier))
                    (type_identifier)))
                (identifier)))
            (expression
              (integer_literal))
            (expression
              (string_literal)))))))
  (expression_statement
    (expression
      (assignment
        (identifier)
        (expression
          (call_expression
            (expression
              (member_expression
                (expression
                  (member_expression
                    (expression
                      (type_identifier))
                    (type_identifier)))
                (identifier)))
            (expression
              (string_literal)))))))
  (expression_statement
    (expression
      (call_expression
        (expression
          (member_expression
            (expression
              (identifier))
            (identifier)))
        (expression
          (identifier))))))

==================
samples/Circuits/TwoDeps/Source/Models/User.vl
==================
module Models


  struct User
    id : Int32
    name : String

    def initialize( @id : Int32, @name : String )
    end

    def get_id -> Int32
      @id
    end

  end


end

---

(source_file
  (module_declaration
    (type_identifier)
    (struct_declaration
      (type_identifier)
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier))
      (method_declaration
        (identifier)
        (parameter_list
          (parameter
            (instance_variable)
            (type_identifier))
          (parameter
            (instance_variable)
            (type_identifier))))
      (method_declaration
        (identifier)
        (type_identifier)
        (expression_statement
          (expression
            (instance_variable)))))))

==================
samples/Functional/ArenaStability.vl
==================
# Regression: FunctionalLowering must not lose a rewrite depending on where
# the expression arena happens to reallocate.
#
# Sections nested inside call arguments used to be rewritten through a field
# reference borrowed from the live parent node; every Context.Add() inside
# LowerSection can reallocate the arena, so the write landed in freed memory
# and the Section survived the Lowering phase — or not, depending on the file
# size. See ArenaStabilityPadded.vl for the same program shifted by
# four unrelated defs: both must lower identically.
#
# Expected: zero Section and zero Composition nodes in `parse --lowered`.

module ArenaDemo

  def self.run -> Void
    users = [ " alice ", "   " ]

    kept = users.filter( (&.empty?.!) )
    tidy = users.map( (&.trim) >> (&.prefix("usr_")) )
  end

end

ArenaDemo.run

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (module_declaration
    (type_identifier)
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (array_literal
                (expression
                  (string_literal))
                (expression
                  (string_literal)))))))
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (call_expression
                (expression
                  (member_expression
                    (expression
                      (identifier))
                    (identifier)))
                (expression
                  (parenthesized_expression
                    (expression
                      (section_expression
                        (identifier))))))))))
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (call_expression
                (expression
                  (member_expression
                    (expression
                      (identifier))
                    (identifier)))
                (expression
                  (binary_expression
                    (expression
                      (parenthesized_expression
                        (expression
                          (section_expression
                            (identifier)))))
                    (expression
                      (parenthesized_expression
                        (expression
                          (section_expression
                            (identifier)
                            (expression
                              (string_literal)))))))))))))))
  (expression_statement
    (expression
      (member_expression
        (expression
          (type_identifier))
        (identifier)))))

==================
samples/Functional/ArenaStabilityPadded.vl
==================
# Twin of ArenaStability.vl, preceded by four unrelated defs so the
# expression arena reallocates at different points. Before the index sweep,
# this padding alone changed how many Section nodes survived Lowering
# (measured: 1 residual at pad 0..3, 2 at pad 4..7) — the tell-tale of a
# reference held across an arena Add(). The lowered dump of both files must
# now contain no Section and no Composition.

def pad_one -> Int32
  1
end

def pad_two -> Int32
  2
end

def pad_three -> Int32
  3
end

def pad_four -> Int32
  4
end

module ArenaDemo

  def self.run -> Void
    users = [ " alice ", "   " ]

    kept = users.filter( (&.empty?.!) )
    tidy = users.map( (&.trim) >> (&.prefix("usr_")) )
  end

end

ArenaDemo.run

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (type_identifier)
    (expression_statement
      (expression
        (integer_literal))))
  (method_declaration
    (identifier)
    (type_identifier)
    (expression_statement
      (expression
        (integer_literal))))
  (method_declaration
    (identifier)
    (type_identifier)
    (expression_statement
      (expression
        (integer_literal))))
  (method_declaration
    (identifier)
    (type_identifier)
    (expression_statement
      (expression
        (integer_literal))))
  (module_declaration
    (type_identifier)
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (array_literal
                (expression
                  (string_literal))
                (expression
                  (string_literal)))))))
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (call_expression
                (expression
                  (member_expression
                    (expression
                      (identifier))
                    (identifier)))
                (expression
                  (parenthesized_expression
                    (expression
                      (section_expression
                        (identifier))))))))))
      (expression_statement
        (expression
          (assignment
            (identifier)
            (expression
              (call_expression
                (expression
                  (member_expression
                    (expression
                      (identifier))
                    (identifier)))
                (expression
                  (binary_expression
                    (expression
                      (parenthesized_expression
                        (expression
                          (section_expression
                            (identifier)))))
                    (expression
                      (parenthesized_expression
                        (expression
                          (section_expression
                            (identifier)
                            (expression
                              (string_literal)))))))))))))))
  (expression_statement
    (expression
      (member_expression
        (expression
          (type_identifier))
        (identifier)))))

==================
samples/JSX/Models/User.vl
==================
class User

  name    : String
  email   : String
  admin   : Bool

  def initialize( @name : String, @email : String, @admin : Bool = false )
  end

  def admin? -> Bool
    @admin
  end

  def inspect
    "#{@name} <#{@email}>"
  end

end

---

(source_file
  (class_declaration
    (type_identifier)
    (field_declaration
      (identifier)
      (type_identifier))
    (field_declaration
      (identifier)
      (type_identifier))
    (field_declaration
      (identifier)
      (type_identifier))
    (method_declaration
      (identifier)
      (parameter_list
        (parameter
          (instance_variable)
          (type_identifier))
        (parameter
          (instance_variable)
          (type_identifier))
        (parameter
          (instance_variable)
          (type_identifier)
          (expression
            (boolean_literal)))))
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (instance_variable))))
    (method_declaration
      (identifier)
      (expression_statement
        (expression
          (string_literal))))))

==================
samples/Sema/AbstractConformance.vl
==================
# A struct or class owes every `abstract def` its mixins declare a real
# implementation. A mixin owes nothing — it may pass a contract along. This
# sample is expected to be rejected: `Incomplete` never implements `size`.

mixin Sized
  abstract def size -> UInt64

  def empty? -> Bool
    size == 0_u64
  end
end

mixin Relayed
  include Sized
end

struct Complete
  include Sized

  def size -> UInt64
    0_u64
  end
end

struct Incomplete
  include Relayed
end

---

(source_file
  (comment)
  (comment)
  (comment)
  (mixin_declaration
    (type_identifier)
    (method_declaration
      (identifier)
      (type_identifier))
    (method_declaration
      (identifier)
      (type_identifier))
    (expression_statement
      (expression
        (binary_expression
          (expression
            (identifier))
          (expression
            (integer_literal))))))
  (field_declaration
    (identifier))
  (mixin_declaration
    (type_identifier)
    (include_declaration
      (type_identifier)))
  (struct_declaration
    (type_identifier)
    (include_declaration
      (type_identifier))
    (method_declaration
      (identifier)
      (type_identifier))
    (expression_statement
      (expression
        (integer_literal))))
  (field_declaration
    (identifier))
  (struct_declaration
    (type_identifier)
    (include_declaration
      (type_identifier))))

==================
samples/Sema/AssignMismatchAssign.vl
==================
# VOLT_CHECK_EXPECT_FAIL — site 2 of 5: assignment to a target whose type is
# already known. Covers a local, an @ivar and a member, since the three reach
# the same check through the same Assign node.

def bad_local_assign -> Void
  n : Int32 = 1
  n = "plain"
end

struct Box
  getter v : Int32

  def initialize
    @v = 0
  end

  def bad_ivar -> Void
    @v = "plain"
  end
end

---

(source_file
  (comment)
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (type_identifier)
    (field_declaration
      (identifier)
      (type_identifier)
      (expression
        (integer_literal)))
    (expression_statement
      (expression
        (assignment
          (identifier)
          (expression
            (string_literal))))))
  (struct_declaration
    (type_identifier)
    (field_declaration
      (identifier)
      (type_identifier))
    (method_declaration
      (identifier)
      (expression_statement
        (expression
          (assignment
            (instance_variable)
            (expression
              (integer_literal))))))
    (method_declaration
      (identifier)
      (type_identifier)
      (expression_statement
        (expression
          (assignment
            (instance_variable)
            (expression
              (string_literal))))))))

==================
samples/Sema/AssignMismatchDefault.vl
==================
# VOLT_CHECK_EXPECT_FAIL — site 5 of 5: a parameter default that does not fit
# the parameter's declared type.

def bad_default( n : Int32 = "plain" ) -> Void
end

---

(source_file
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)
        (expression
          (string_literal))))
    (type_identifier)))

==================
samples/Sema/AssignMismatchLocal.vl
==================
# VOLT_CHECK_EXPECT_FAIL — site 1 of 5: a local declaration whose initializer
# does not fit the written type.
#
# The second case is the one that proves the rule is a *direction*, not just an
# equality: widening (Int8 -> UInt64) is accepted, narrowing is not.

def bad_local -> Void
  n : Int32 = "plain"
end

def narrowing -> Void
  wide : UInt64 = 5
  narrow : Int32 = wide
end

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (type_identifier)
    (field_declaration
      (identifier)
      (type_identifier)
      (expression
        (string_literal))))
  (method_declaration
    (identifier)
    (type_identifier)
    (field_declaration
      (identifier)
      (type_identifier)
      (expression
        (integer_literal)))
    (field_declaration
      (identifier)
      (type_identifier)
      (expression
        (identifier)))))

==================
samples/Sema/AssignMismatchReturn.vl
==================
# VOLT_CHECK_EXPECT_FAIL — site 3 of 5: an explicit `return` that does not
# match the declared return type.

def bad_return -> Int32
  return "plain"
end

---

(source_file
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (type_identifier)
    (return_statement
      (expression
        (string_literal)))))

==================
samples/Sema/AssignMismatchTrailing.vl
==================
# VOLT_CHECK_EXPECT_FAIL — site 4 of 5: a method's trailing expression, which
# is its value when no `return` is written. This is the case §3.3 of the plan
# opened with, and the one that used to be accepted in complete silence.

def bad_trailing -> Int32
  "plain"
end

---

(source_file
  (comment)
  (comment)
  (comment)
  (method_declaration
    (identifier)
    (type_identifier)
    (expression_statement
      (expression
        (string_literal)))))

==================
samples/Sema/Assignability.vl
==================
# The five value positions that must agree with the type they flow into.
# Before phase C not one of them compared anything: `def r -> Int32 ; "plain" ;
# end` type-checked cleanly. All five now go through the single predicate
# `TypeCompat::IsAssignable`, called after constraint propagation so that an
# unconstrained literal has already been narrowed to the expected type.
#
# Everything here is *valid* — the five refusals live in the
# AssignMismatch*.vl samples.

# 1. Local declaration with a written type.
def local_decl -> Int32
  n : Int32 = 42
  wide : UInt64 = 7
  text : String = "ok"
  n
end

# 2. Assignment to a target whose type is known — local, @ivar, or member.
struct Counter
  getter total : UInt64

  def initialize
    @total = 0
  end

  def bump( by : UInt64 ) -> Void
    @total = @total + by
    local : UInt64 = 1
    local = local + by
  end
end

# 3. `return` against the declared return type.
def explicit_return -> String
  return "done"
end

# 4. A method's trailing expression, same rule as `return`.
def trailing -> Bool
  1 == 1
end

# A `-> Void` method's return type is an invalid SemaTypeId, so its trailing
# value is checked against nothing — no name is compared to reach that.
def void_discards_its_tail -> Void
  99
end

# 5. Parameter defaults.
def defaulted( n : Int32 = 5, label : String = "x", wide : UInt64 = 1 ) -> Int32
  n
end

# Widening between scalars of one family is allowed, and is what lets every
# integer width answer `Hashable`'s `hash -> UInt64` contract by returning
# `self`. Narrowing is not — see AssignMismatchLocal.vl.
def widening -> UInt64
  small : Int8 = 3
  small
end

# `null` fits any pointer-shaped slot; it is recognised through the node kind
# `Nil` claims, never through its name.
def nil_into_pointer -> Void
  buf : Pointer<UInt8> = Pointer<UInt8>.malloc( 8 )
  if buf != nil
    buf.free
  end
end

---
